syntax = "proto3";

message Device {
  double id = 1;
  string device_id = 2;
  string provider_id = 3;
  string vehicle_id = 4;
  string type = 5;
  repeated string propulsion = 6;
  optional int32 year = 7;
  optional string mfgr = 8;
  optional string model = 9;
  double recorded = 10;
}

message FindDevicesRequest {
  optional int32 limit = 1 [default = 10];
}

message FindDevicesResponse {
  repeated Device devices = 1;
}

message FindDeviceByVehicleIdRequest {
    string vehicle_id = 1;
}

message FindDeviceByVehicleIdResponse {
    Device device = 1;
}

service Repository {
    rpc findDevices (FindDevicesRequest) returns (FindDevicesResponse) {};
    rpc findDeviceByVehicleId (FindDeviceByVehicleIdRequest) returns (FindDeviceByVehicleIdResponse) {};
}